--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "base-64": "^1.0.0",
     "nsfwjs": "^4.1.0",
     "puppeteer": "^22.6.2",
+    "request": "^2.88.2",
     "sharp": "^0.33.3"
   }
 }
